# ai-model-demo

./: .env.example  README.md  main.py  pyproject.toml
config/: config.py
tests/: get_aihubmix_models.py  get_azure_models.py  get_baidu_models.py  get_openai_models.py  get_qwen_models.py  get_zhipu_models.py  test_all_platforms.py  test_code_generation.py  test_single_platform.py
